--- a/src/airflow/airflow/airflow.cfg
+++ b/src/airflow/airflow/airflow.cfg
@@ -4,8 +4,7 @@
 #
 # Variable: AIRFLOW__CORE__DAGS_FOLDER
 #
-env_vars = 
-   PYTHONPATH=/home/username/blackstraw_ml_automation
+PYTHONPATH = /home/username/blackstraw_ml_automation/src
    
 dags_folder = /home/username/blackstraw_ml_automation/src/airflow/airflow/dags
 # Hostname by providing a path to a callable, which will resolve the hostname.
