--- a/src/airflow/airflow/airflow.cfg
+++ b/src/airflow/airflow/airflow.cfg
@@ -5,6 +5,8 @@
 # Variable: AIRFLOW__CORE__DAGS_FOLDER
 #
 PYTHONPATH = /home/username/blackstraw_ml_automation/src
+
+export MLFLOW_TRACKING_URI=http://localhost:5000
    
 dags_folder = /home/username/blackstraw_ml_automation/src/airflow/airflow/dags
 # Hostname by providing a path to a callable, which will resolve the hostname.
