--- a/references/gx/checkpoints/my_checkpoint.yml
+++ b/references/gx/checkpoints/my_checkpoint.yml
@@ -7,7 +7,7 @@
      - batch_request:
          datasource_name: my_datasource
          data_connector_name: default_inferred_data_connector_name
-         data_asset_name: extracted_data.csv
+         data_asset_name: extracted_data
          limit: 1000
        expectation_suite_name: extracted_data.csv.warning
    action_list:
