--- a/references/gx/great_expectations.yml
+++ b/references/gx/great_expectations.yml
@@ -23,11 +23,11 @@ datasources:
       default_inferred_data_connector_name:
         class_name: InferredAssetFilesystemDataConnector
         module_name: great_expectations.datasource.data_connector
-        base_directory: ..
+        base_directory: /home/username/blackstraw_ml_automation/data/raw/ge
         default_regex:
           group_names:
             - data_asset_name
-          pattern: (.*)
+          pattern: (.*)\.csv
       default_runtime_data_connector_name:
         class_name: RuntimeDataConnector
         module_name: great_expectations.datasource.data_connector
